# tzctl

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: release.yml
src/: apply.rs  config.rs  error.rs  insights.rs  main.rs  model.rs  output.rs  reconcile.rs  status.rs  symbols.rs  table.rs
src/auth/: cache.rs  client_credentials.rs  device.rs  mod.rs  oidc.rs  token.rs
src/cli/: alert.rs  apply.rs  auth.rs  commands.rs  destroy.rs  insights.rs  lifecycle.rs  list.rs  mod.rs  node.rs  org.rs  plan.rs  pull.rs  run.rs  status.rs  workspace.rs
src/client/: mod.rs  pipelines.rs  query.rs  session.rs  transport.rs
src/project/: frontmatter.rs  mod.rs
tests/fixtures/: diagnostics_events.json  pipeline_activity.json  pipeline_create.json  pipeline_list.json  pipeline_update.json
tests/fixtures/project/pipelines/: suricata.tql  zeek-import.tql
