[package]
name = "tzctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Manage managed Tenzir pipelines through the Tenzir Platform"
authors = ["Tenzir <engineering@tenzir.com>"]
readme = "README.md"
homepage = "https://tenzir.com"
repository = "https://github.com/tenzir/tzctl"
documentation = "https://docs.tenzir.com"
keywords = ["tenzir", "pipeline", "cli", "platform", "security"]
categories = ["command-line-utilities"]

[[bin]]
name = "tzctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
owo-colors = "4"
comfy-table = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
serde_yaml = "0.9"
globwalk = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
